tests/panic_bad_arg_type.stderr
tests/panic_bad_arg_type.sl:30:31: error: type mismatch
