tests/panic_bad_arg_type.sl
pub fn bad(n i32) {
    panic(n)
}
